--- a/crates/internal/Cargo.toml
+++ b/crates/internal/Cargo.toml
@@ -10,10 +10,14 @@ edition = "2021"
 #ring = "0.16.20"
 sha256 = "1.3.0"
 #sha2 = "0.10.7"
+hex = "0.4.3"
+openssl = "0.10.56"
 
 #[:: Parallelization ::]
 rayon = "1.7.0"
 
-[dev-dependencies]
 #[:: Logging ::]
 log = "0.4.20"
+
+[dev-dependencies]
+pocket_micro_benching = { git = "https://github.com/hardskulls/pocket_micro_benching" }
