--- a/crates/internal/Cargo.toml
+++ b/crates/internal/Cargo.toml
@@ -8,10 +8,11 @@ edition = "2021"
 [dependencies]
 #[:: Hashing ::]
 #ring = "0.16.20"
-sha256 = "1.3.0"
+sha256 = { version = "1.3.0", features = ["native_openssl"] }
 #sha2 = "0.10.7"
-hex = "0.4.3"
-openssl = "0.10.56"
+hex = { version = "0.4.3", features = ["default"] }
+openssl = { version = "0.10.56", features = ["default"] }
+ring = { version = "0.16.20", features = ["default"] }
 
 #[:: Parallelization ::]
 rayon = "1.7.0"
