--- a/crates/app/Cargo.toml
+++ b/crates/app/Cargo.toml
@@ -17,3 +17,6 @@ clap = { version = "4.3.21", features = ["derive"] }
 
 #[:: Errors ::]
 #color-eyre = "0.6.2"
+
+#[:: Logging ::]
+pretty_env_logger = "0.5.0"
