--- a/crates/internal/Cargo.toml
+++ b/crates/internal/Cargo.toml
@@ -2,6 +2,12 @@
 name = "internal"
 version = "0.1.0"
 edition = "2021"
+authors = ["Alexander Lebedev <hardskulls@rambler.ru>"]
+description = """
+internal code of hash_finder containing most of the logic.
+"""
+homepage = "https://github.com/hardskulls/pocket_micro_benching"
+repository = "https://github.com/hardskulls/pocket_micro_benching"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
