--- a/crates/internal/Cargo.toml
+++ b/crates/internal/Cargo.toml
@@ -11,13 +11,17 @@ repository = "https://github.com/hardskulls/pocket_micro_benching"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+openssl_hasher = ["dep:openssl"]
+sha256_hasher = ["dep:sha256"]
+
 [dependencies]
 #[:: Hashing ::]
 #ring = "0.16.20"
-sha256 = { version = "1.3.0", features = ["native_openssl"] }
+sha256 = { version = "1.3.0", features = ["native_openssl"], optional = true }
 #sha2 = "0.10.7"
 hex = { version = "0.4.3", features = ["default"] }
-openssl = { version = "0.10.56", features = ["default"] }
+openssl = { version = "0.10.56", features = ["default"], optional = true }
 ring = { version = "0.16.20", features = ["default"] }
 
 #[:: Parallelization ::]
@@ -25,6 +29,9 @@ rayon = "1.7.0"
 
 #[:: Logging ::]
 log = "0.4.20"
+
+#[:: Numbers ::]
+num-traits = "0.2.16"
 
 [dev-dependencies]
 pocket_micro_benching = { git = "https://github.com/hardskulls/pocket_micro_benching" }
